2009-12-09  Sanel <karijes@users.sourceforge.net>

	* edelib/Netwm.h:
	* src/Netwm.cpp: attempt to put common wm code in one place

2009-12-03  Sanel <karijes@users.sourceforge.net>

	* src/tinyscheme/scheme.c: dump {} tokens; fixed so [] tokens can be
	aliased with ()

2009-12-02  Sanel <karijes@users.sourceforge.net>

	* configure.in:
	* edelib/DateTime.h:
	* edelib/File.h:
	* edelib/TableBase.h:
	* src/DateTime.cpp:
	* src/DesktopFile.cpp:
	* src/EdbusMessage.cpp:
	* src/File.cpp:
	* src/IconChooser.cpp:
	* src/IconTheme.cpp:
	* src/MessageBox.cpp:
	* src/PtyProcess.cpp:
	* src/SevenSeg.cpp:
	* src/TableBase.cpp:
	* src/tinyscheme/scheme.c:
	* test/UnitTest.cpp: added -Wshadow flag to prevent variable shadowing;
	cleaned warnings

2009-12-01  Sanel <karijes@users.sourceforge.net>

	* src/tinyscheme/gen-c-string.sh: accept parameter and construct variable
	name from parameter name

2009-11-25  Sanel <karijes@users.sourceforge.net>

	* examples/theme.cpp: s/Fl_Button.h/Fl_Button.H
	* examples/Jamfile: let theme.cpp use FLTK_CFLAGS
	* edelib/ForeignCallback.h: fixed example to match function changes

2009-11-24  Sanel <karijes@users.sourceforge.net>

	* src/tinyscheme/theme.scm: fix a typo in comment; additionally clarify
	theme.style-get function
	* examples/theme.cpp:
	* examples/theme-sample: simple example of theming engine

2009-11-20  Sanel <karijes@users.sourceforge.net>

	* autogen.sh: emulate basic aclocal functionality so edelib does not
	require whole automake package for this
	* src/String.cpp:
	* src/IconChooser.cpp: allow it to compile on gcc >= 4.4.1 due
	introduction const safe C string function

2009-11-17  Sanel <karijes@users.sourceforge.net>

	* edelib/Missing.h:
	* src/Missing.cpp: edelib_daemon() added since Solaris family does not
	provides it at all
	* edelib/Missing.h: separate these functions to different documentation
	module
	* test/run.cpp: do not use 'tar' without path or GNU version will be